- Fix work experience component and make data dynamic  - add social link and icon like linkedin, stackoverflow, github

--- a/source/src/app/aniruddh/components/home/home.component.scss
+++ b/source/src/app/aniruddh/components/home/home.component.scss
@@ -3,6 +3,6 @@
     margin-top: 10px;
   }
   .summary {
-    margin-top: 110px;
+    margin-top: 70px;
   }
 }
